Menu Button Gap Fix [Temporary]
This commit will fix the menu button's gap from the menu. But not how I would like

--- a/css/output.css
+++ b/css/output.css
@@ -401,6 +401,7 @@ body {
 }
 .box-section h1 {
   color: #f06856;
+  line-height: 1.7rem;
 }
 .box-section a {
   opacity: 40%;
@@ -577,7 +578,7 @@ button:active {
     height: 450px;
     left: 0px;
     background: white;
-    border-bottom: solid 5px #f06856;
+    border-bottom: solid 20px #f06856;
   }
 }
 
