--- a/css/sass/partials/_layout.scss
+++ b/css/sass/partials/_layout.scss
@@ -18,7 +18,8 @@
         height: 450px;
         left: 0px;
         background: white;
-        border-bottom: solid 5px $primary-colour;
+        // border-bottom: solid 5px $primary-colour;
+        border-bottom: solid 20px $primary-colour;
     }
 }
 
