--- a/css/sass/partials/_styles.scss
+++ b/css/sass/partials/_styles.scss
@@ -454,6 +454,7 @@ body {
 
     h1 {
         color: $primary-colour;
+        line-height: 1.7rem;
     }
 
     a {
